# Rizen

./: .gitignore  CMakeLists.txt  README.md  main.cpp
rizen/: rizen.h
rizen/app/: app.cpp  app.h  input.cpp  input.h  ressource_manager.cpp  ressource_manager.h
rizen/entity/: ecs.cpp  ecs.h  ecs.tpp  entity.cpp  entity.h
rizen/opengl/: camera.cpp  camera.h  model.cpp  model.h  opengl_2d.cpp  opengl_2d.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
rizen/utils/: glew_utils.h  glm_utils.cpp  glm_utils.h  log.h  rizen_math.cpp  rizen_math.h  rizen_time.cpp  rizen_time.h
rizen/world/: map.cpp  map.h  skybox.cpp  skybox.h
shaders/: basic.fa  basic.vr  inst_basic.fa  inst_basic.vr
shaders/2d/: basic.fa  basic.vr  custom.fa  inst_basic.fa  inst_basic.vr
shaders/shadow/: shadow.fa  shadow.vr
shaders/terrain/: map.fa  map.vr  skybox.fa  skybox.vr
zgame/: gcomponent.cpp  gcomponent.h  zgame.h
zgame/component/: bounce_comp.h  input_move_comp.h  move.h  move_comp.h  player_move_comp.h  render_comp.h  renderable.h  transform.h  transform_comp.cpp  transform_comp.h
zgame/game/: camera_control.cpp  camera_control.h  day_manager.cpp  day_manager.h  main_game.cpp  main_game.h  main_scene.cpp  main_scene.h  shadow_map.cpp  shadow_map.h
zgame/system/: bounce_system.cpp  bounce_system.h  input_move_system.cpp  input_move_system.h  move_system.cpp  move_system.h  player_move_system.cpp  player_move_system.h  render_system.cpp  render_system.h
